crates/pimiento-core/tests/snapshots/aborted-run.snap
---
source: crates/pimiento-core/tests/replay_snapshots.rs
expression: "& summary"
---
run_phase: idle
state:
  quality: unknown
  has_snapshot: false
  model: ~
  is_streaming: false
  is_compacting: ~
  fast_mode_enabled: ~
  fast_mode_active: ~
transcript:
  - kind: error
    message: Interrupted by user
    code: aborted
pending_dialogs: []
display:
  title: ~
  statuses: {}
  widget_keys:
    - autoresearch
  editor_text: ~
todos:
  present: false
  entries: ~
subagents_count: 0
available_commands_count: 47
dead_reason: ~
counts:
  physical_frames: 16
  logical_frames: 16
  chunk_frames: 0
  reassembled_sequences: 0
